commit al master del bloqpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div id ="container">
+        <div id = "post">
+            <h1> Este es el título</h1>
+            <p> y este es el párrafo de inicio donde vamos a 
+                explicar las sobre las rammas</p>
+        </div>
+    </div>
     <h1>Aqui vamos a hacer un blog post</h1>
     <p> y este es el parrrafo de inicio</p>
 </body>
