finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id ="container">
         <div id = "Cabecera">
-            Cabecera
+            Mega cabecera
+            <span = "tagline">Tu blog de confianza</span>
         </div>
         <div id = "post">
             <h1> Este es el título</h1>
