agregue algo de contenido

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
             <h1> Este es el título</h1>
             <p> y este es el párrafo de inicio donde vamos a 
                 explicar las sobre las rammas</p>
+            <p>Los blogs son la mejor forma de compartir info</p>
         </div>
     </div>
     <h1>Aqui vamos a hacer un blog post</h1>
