--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id ="container">
         <div id = "Cabecera">
             Mega cabecera
-            <span = "tagline">Tu blog de confianza</span>
+            <span = "tagline">Tu blog de cabecera</span>
         </div>
         <div id = "post">
             <h1> Este es el título</h1>
