Agrego suscribirse y like

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,16 +11,18 @@
     <div id ="container">
         <div id = "Cabecera">
             Mega cabecera
-            <span = "tagline">Tu blog de confianza</span>
+            <span = "tagline">Tu blog de maestro</span>
         </div>
         <div id = "post">
             <h1> Este es el título</h1>
             <p> y este es el párrafo de inicio donde vamos a 
                 explicar las sobre las rammas</p>
             <p>Los blogs son la mejor forma de compartir info</p>
+            
         </div>
     </div>
     <h1>Aqui vamos a hacer un blog post</h1>
     <p> y este es el parrrafo de inicio</p>
+    <p>Suscribete y dale like</p>
 </body>
 </html>
