cambio del titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
             <span = "tagline">Tu blog de cabecera</span>
         </div>
         <div id = "post">
-            <h1> Este es el título</h1>
+            <h1> Titulo desde github</h1>
             <p> y este es el párrafo de inicio donde vamos a 
                 explicar las sobre las rammas</p>
             <p>Los blogs son la mejor forma de compartir info</p>
