--- a/blogpost.html
+++ b/blogpost.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "css/estilos.css" />
     <title>Bienvenido a hyperblog 2.0</title>
-</head>
-<body>
-    <div id ="container">
-        <div id = "Cabecera">
-            Mega cabecera
-            <span = "tagline">Tu blog de cabecera</span>
+    <head>
+        <title>Bienvenido a Hyperblog 2.0</title>
+        <link rel="stylesheet" href="css/estilos.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
+            </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
+            </div>
         </div>
-        <div id = "post">
-            <h1> Titulo desde github</h1>
-            <p> y este es el párrafo de inicio donde vamos a 
-                explicar las sobre las rammas</p>
-            <p>Los blogs son la mejor forma de compartir info</p>
-            
-        </div>
-    </div>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p> y este es el parrrafo de inicio</p>
-    <p>Suscribete y dale like</p>
-</body>
+    </body>
 </html>
